# cedh-mulligan-simulator

./: .gitignore  .releaserc.yaml  AGENTS.md  CLAUDE.md  README.md  import_deck.py  pyproject.toml  run_helpers.py  run_serum_powder_experiment.py  run_simulation.py  todo.md  tox.ini
.github/: CODEOWNERS
.github/workflows/: release.yaml
card_database/: __init__.py
card_database/black/: __init__.py
card_database/blue/: __init__.py
card_database/colorless/: __init__.py
card_database/green/: __init__.py
card_database/lands/: __init__.py
card_database/red/: __init__.py
card_database/white/: __init__.py
card_registries/: __init__.py
card_registries/colorless/: __init__.py
card_registries/dual/: __init__.py
card_registries/five/: __init__.py
card_registries/four/: __init__.py
card_registries/mono/: __init__.py
card_registries/three/: __init__.py
cedh_mulligan_simulator/: __init__.py  card_registry.py  deck.py  mana.py  turn_result.py
cedh_mulligan_simulator/extenders/: __init__.py  timing_extender.py
deck_importer/: __init__.py  builder.py  generator.py  mapper.py  parser.py  scryfall.py
docs/: getting-started.md
tests/: helpers.py  test_card_registry.py  test_deck.py  test_hand_generator.py  test_integration_mloda_specific_hands.py  test_mana.py  test_mulligan_result.py  test_timing_extender.py  test_turn_evaluation.py  test_turn_simulation.py
tests/deck_importer/: test_deck_importer.py
tests/feature_groups/: test_data_providers.py
tests/integration/: test_integration_mloda_specific_hands.py  test_integration_serum_powder.py  (+1 more)
(+41 files in other folders)
