[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cedh-mulligan-simulator"
# Always start at least at 0.2.0 to make semver work.
# Initial release for semver needs also a manually pushed minimum tag (likely 0.2.0).
version = "0.3.1"
description = "cEDH mulligan simulator - plugin for Magic: The Gathering Commander mulligan analysis"
license = "Apache-2.0"
authors = [{ name = "Tom", email = "mulligan@mloda.ai" }]
dependencies = ["mloda>=0.4.5", "mloda-testing>=0.2.8", "pandas>=2.0"]
requires-python = ">=3.10"

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]
dev = [
    "tox",
    "tox-uv",
    "pytest",
    "pytest-xdist",
    "pytest-timeout",
    "ruff",
    "mypy",
    "bandit",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cedh_mulligan_simulator*", "card_registries*", "card_database*"]

[tool.pytest.ini_options]
testpaths = ["cedh_mulligan_simulator", "tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[tool.bandit]
exclude_dirs = [".tox", ".venv", "tests"]
